Fix chevron left/right on sidebar collapsed
Avoid wrong chevron position when the sidebar is collapsed and the user
reload the page. Avoid clickable overflow on nav toggle button.

--- a/backend/app/assets/stylesheets/spree/backend/components/_navigation.scss
+++ b/backend/app/assets/stylesheets/spree/backend/components/_navigation.scss
@@ -10,6 +10,7 @@ $padding-y-navbar-submenu: 9px;
   color: $color-navbar;
   font-weight: $font-weight-bold;
   position: relative;
+  overflow: hidden;
   display: block;
   height: 39px;
   z-index: 1;
@@ -58,7 +59,7 @@ $padding-y-navbar-submenu: 9px;
   }
 
   .admin-login-nav a {
-    text-overflow:clip;
+    text-overflow: clip;
   }
 
   .brand-link {
@@ -258,7 +259,7 @@ nav.menu {
   &:before {
     z-index: 1;
     top: 1.5em;
-    pointer-events:none;
+    pointer-events: none;
   }
 
   &:after {
@@ -272,7 +273,7 @@ nav.menu {
     left: -2.1em;
     top: 1.5em;
     margin-top: -1em;
-    pointer-events:none;
+    pointer-events: none;
   }
 
   > li {
